overflow fix?

--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -19,3 +19,4 @@
   .application > main > .container
     min-height: 0
     overflow-y: hidden
+    overflow-x: hidden
