--- a/src/stylus/markdown.styl
+++ b/src/stylus/markdown.styl
@@ -1,6 +1,7 @@
 .markdown-body
   //code, pre
   //  font-weight: normal !important
+  max-width: 100%
 
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
@@ -96,6 +97,7 @@
     padding-bottom: 0.2em
     padding-top: 0.2em
   pre
+    overflow-x auto
     font: 12px "Roboto Mono", monospace
     margin-bottom: 0
     margin-top: 0
